GS-13857 : Alignment issues in PDF

--- a/src/webapp/res/css/15_pdf/realEstate.css
+++ b/src/webapp/res/css/15_pdf/realEstate.css
@@ -334,16 +334,16 @@ hr.rulethin	{
 }
 
 .mod-1 .inner .bd p{
-    padding: 15px;
+    padding: 10px 15px 0px 15px;
 }
 
 .mod-1 .inner .bd .tableHeader{
     background-color: #F1F1F1;
-    padding: 15px;
+    padding: 10px 15px;
 }
 
 .mod-1 .inner .bd .tableRow{
-    padding: 15px;
+    padding: 10px 15px;
 }
 
 /***********************Module-2**************************/
